Fix vertical align of slideshow buttons

--- a/css/style.scss
+++ b/css/style.scss
@@ -687,6 +687,7 @@ header {
 .slideshow__button {
     position: absolute;
     top: 50%;
+    transform: translateY(-50%);
 
     outline: none;
     border: none;
